# ib-edl

./: .gitignore  README.md  setup.cfg
configs/_base_/: arc_c.yaml  arc_e.yaml  csqa.yaml  edl_schedule.yaml  llama2_7b.yaml  llama3_8b.yaml  misc.yaml  mistral_7b.yaml  non_edl_schedule.yaml  obqa.yaml  race.yaml  sciq.yaml
configs/arc_c_llama2_7b/: ib_arc_c_llama2_7b.yaml  ib_noisy_arc_c_llama2_7b.yaml  map_arc_c_llama2_7b.yaml  map_noisy_arc_c_llama2_7b.yaml  ss_kl_arc_c_llama2_7b.yaml  ss_kl_noisy_arc_c_llama2_7b.yaml
configs/arc_c_llama3_8b/: ib_arc_c_llama3_8b.yaml  ib_noisy_arc_c_llama3_8b.yaml  map_arc_c_llama3_8b.yaml  map_noisy_arc_c_llama3_8b.yaml  ss_kl_arc_c_llama3_8b.yaml  ss_kl_noisy_arc_c_llama3_8b.yaml
configs/arc_c_mistral_7b/: ib_arc_c_mistral_7b.yaml  ib_noisy_arc_c_mistral_7b.yaml  map_arc_c_mistral_7b.yaml  map_noisy_arc_c_mistral_7b.yaml  ss_kl_arc_c_mistral_7b.yaml  ss_kl_noisy_arc_c_mistral_7b.yaml
configs/arc_e_llama2_7b/: ib_arc_e_llama2_7b.yaml  ib_noisy_arc_e_llama2_7b.yaml  map_arc_e_llama2_7b.yaml  map_noisy_arc_e_llama2_7b.yaml  ss_kl_arc_e_llama2_7b.yaml  ss_kl_noisy_arc_e_llama2_7b.yaml
configs/arc_e_llama3_8b/: ib_arc_e_llama3_8b.yaml  ib_noisy_arc_e_llama3_8b.yaml  map_arc_e_llama3_8b.yaml  map_noisy_arc_e_llama3_8b.yaml  ss_kl_arc_e_llama3_8b.yaml  ss_kl_noisy_arc_e_llama3_8b.yaml
configs/arc_e_mistral_7b/: ib_arc_e_mistral_7b.yaml  ib_noisy_arc_e_mistral_7b.yaml  map_arc_e_mistral_7b.yaml  map_noisy_arc_e_mistral_7b.yaml  ss_kl_arc_e_mistral_7b.yaml  ss_kl_noisy_arc_e_mistral_7b.yaml
configs/csqa_llama2_7b/: ib_csqa_llama2_7b.yaml  (+5 more)
tests/: test_dataset.py
tools/: baseline_ft.py  evidential_ft.py  ood.py
(+118 files in other folders)
